# GraduationClient

./: .gitignore  CMakeLists.txt  Fix.qml  Images.qrc  Main.qml  README.md  Strings.qrc  main.cpp
colorSchemes/: BlueDark.qml  BlueLight.qml
config/: Controls.qml  ControlsProperties.qml  CurrentColorScheme.qml  DefaultColorSet.qml  FontProperties.qml  WindowSizes.qml
const/: CMakeLists.txt  Constants.qml  DefaultColorScheme.qml
dialogs/: GlobalServiceDialog.qml  InfoDialog.qml  LogInDialog.qml  ReviewDialog.qml  SignUpDialog.qml
js/: CMakeLists.txt
pages/: ContractDetailsMaintenancePage.qml  ContractDetailsOneTimePage.qml  ContractDetailsPage.qml  ContractListPage.qml  ContractMaintenanceListPage.qml  ContractServiceListPage.qml  DeveloperComponentListPage.qml  DeveloperFacilityListPage.qml  DeveloperManufacturerListPage.qml  DeveloperServiceListPage.qml  OrganisationDetailsPage.qml  OrganisationListPage.qml  OrganisationLocalServicesPage.qml  ProfilePage.qml  TasksPage.qml
qml/: CMakeLists.txt  GButton.qml  GColorGroup.qml
src/: AppState.cpp  AppState.h  AppWrapper.cpp  AppWrapper.h  CMakeLists.txt  Component.h  Contract.h  Facility.h  GBase.h  Manufacturer.h  Organisation.h  REST_AppWrapper.cpp  REST_Classes.cpp  REST_Classes.h  REST_Wrapper.cpp  RegKey.h  User.h  UserState.cpp  UserState.h
strings/: Russian.qml
types/: GButton.qml  GButtonTemplate.qml  GComboBox.qml  GDialog.qml  GErrorDialog.qml  GGroupBox.qml  GIconButton.qml  GLabel.qml  GPage.qml  GTableLabel.qml  GTextArea.qml  GTextField.qml  GTextLink.qml  XGButton.qml
types/basic/: GCanvas.qml  GColorScheme.qml  GColorSet.qml  GColorTriplet.qml  GCursor.qml
types/models/: ContractServiceTableModel.qml  GlobalFacilityComponentTableModel.qml  GlobalManufacturerTableModel.qml  GlobalServiceTableModel.qml  OrganisationLocalServiceTableModel.qml  OrganisationRegKeyTableModel.qml  OrganisationTableModel.qml  ReviewListModel.qml  TaskShowOptionComboBoxListModel.qml  TaskSortOptionComboBoxListModel.qml  TaskTableModel.qml
types/models/comboBox/: TaskShowOptionComboBoxListModel.qml
types/views/: ContractFacilityComponentTableView.qml  ContractMaintenanceTableView.qml  ContractServiceTableView.qml  ContractTableView.qml  GTableView.qml  GlobalBankTableView.qml  GlobalComponentTableView.qml  GlobalFacilityComponentTableView.qml  GlobalFacilityTableView.qml  GlobalManufacturerTableView.qml  GlobalServiceTableView.qml  OrganisationLocalServiceTableView.qml  OrganisationRegKeyTableView.qml  OrganisationTableView.qml  PrivilegeTableView.qml  TaskTableView.qml
